unpackaged/objects/OpportunityNamingSetting__mdt.object
<CustomObject>
  <description>Used to configure default Opportunity naming</description>
  <fields>
    <fullName>Country__c</fullName>
    <inlineHelpText>2 digit country code matching Account.Country__c</inlineHelpText>
    <label>Country</label>
    <length>2</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Field1__c</fullName>
    <label>Field 1</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Account.Name</fullName>
          <default>true</default>
          <label>Account.Name</label>
        </value>
        <value>
          <fullName>CloseDate</fullName>
        </value>
        <value>
          <fullName>NA_Brand__c</fullName>
        </value>
        <value>
          <fullName>NA_Category__c</fullName>
        </value>
        <value>
          <fullName>Owner.Name</fullName>
        </value>
        <value>
          <fullName>Type</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Field2__c</fullName>
    <label>Field 2</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Account.Name</fullName>
        </value>
        <value>
          <fullName>CloseDate</fullName>
          <default>true</default>
          <label>CloseDate</label>
        </value>
        <value>
          <fullName>NA_Brand__c</fullName>
        </value>
        <value>
          <fullName>NA_Category__c</fullName>
        </value>
        <value>
          <fullName>Owner.Name</fullName>
        </value>
        <value>
          <fullName>Type</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Field3__c</fullName>
    <label>Field 3</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Account.Name</fullName>
        </value>
        <value>
          <fullName>CloseDate</fullName>
        </value>
        <value>
          <fullName>NA_Brand__c</fullName>
        </value>
        <value>
          <fullName>NA_Category__c</fullName>
          <default>true</default>
          <label>NA_Category__c</label>
        </value>
        <value>
          <fullName>Owner.Name</fullName>
        </value>
        <value>
          <fullName>Type</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Separator__c</fullName>
    <defaultValue>" "</defaultValue>
    <inlineHelpText>Used to separate the different fields.
Blank defaults to empty space " ".
Example: Separator = " - " will give Name = &lt;fieldOne&gt; - &lt;fieldTwo&gt; - &lt;fieldN&gt;</inlineHelpText>
    <label>Separator</label>
    <length>1</length>
    <type>Text</type>
  </fields>
  <label>Opportunity Naming Setting</label>
  <listViews>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Country__c</columns>
    <columns>Field1__c</columns>
    <columns>Field2__c</columns>
    <columns>Field3__c</columns>
    <columns>Field4__c</columns>
    <columns>Field5__c</columns>
    <columns>Separator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
  </listViews>
  <pluralLabel>Opportunity Naming Settings</pluralLabel>
</CustomObject>